# ScreenRotator

./: .gitignore  CMakeLists.txt  README.md
aur/: .gitignore  PKGBUILD  screenrotator-modified-git-1:r25.e1de8b7-1-x86_64.pkg.tar.zst
aur/pkg/screenrotator-modified-git/: .BUILDINFO  .MTREE  .PKGINFO
aur/pkg/screenrotator-modified-git/etc/xdg/autostart/: screenrotator-autostart.desktop
aur/pkg/screenrotator-modified-git/usr/share/applications/: screenrotator.desktop
aur/screenrotator-modified-git/: config  packed-refs
aur/screenrotator-modified-git/objects/pack/: pack-eb01916504612514224f44edeb5b224b37af84be.idx  pack-eb01916504612514224f44edeb5b224b37af84be.pack
src/: CMakeLists.txt  displaymanager.cpp  displaymanager.h  main.cpp  orientation.h  orientationsensor.cpp  orientationsensor.h  rotateinput.cpp  rotateinput.h  screenrotator-autostart.desktop.in  screenrotator.desktop  trayicon.cpp  trayicon.h
src/resources/: create_icons  resources.qrc
